add e-mail support
